force-app/main/default/objects/Order/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIll to account details of order</description>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill To Account)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>