force-app/main/default/objects/Order/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payer information</description>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Payer)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>