force-app/main/default/objects/Order/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship to account</description>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship To Account)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>